Fixing spacing

--- a/src/styles/_site.scss
+++ b/src/styles/_site.scss
@@ -55,8 +55,8 @@ div, p, h1, h2, h3, h4, h5, h6, body, button {
 .h2-heading {
   font-style: normal;
   font-weight: bold;
-  font-size: 32px;
-  line-height: 34px;
+  font-size: 30px;
+  line-height: 32px;
   color: #FFFFFF;
 }
 
@@ -71,8 +71,8 @@ div, p, h1, h2, h3, h4, h5, h6, body, button {
 .p1-descriptions {
   font-style: normal;
   font-weight: 300;
-  font-size: 14px;
-  line-height: 15px;
+  font-size: 12px;
+  line-height: 13px;
   color: #FFFFFF;
   margin: 0 !important;
 }
@@ -80,8 +80,8 @@ div, p, h1, h2, h3, h4, h5, h6, body, button {
 .p2-reading-values {
   font-style: normal;
   font-weight: bold;
-  font-size: 28px;
-  line-height: 32px;
+  font-size: 24px;
+  line-height: 28px;
   color: #FFFFFF;
   margin: 0 !important;
 }
@@ -98,8 +98,8 @@ div, p, h1, h2, h3, h4, h5, h6, body, button {
 .p5-feedback {
   font-style: normal;
   font-weight: normal;
-  font-size: 12px !important;
-  line-height: 10px !important;
+  font-size: 10px !important;
+  line-height: 11px !important;
   color: #FFFFFF;
   margin: 0 !important;
 }
@@ -116,7 +116,7 @@ div, p, h1, h2, h3, h4, h5, h6, body, button {
 .b1-main {
   font-style: normal;
   font-weight: 500;
-  font-size: 20px;
-  line-height: 22px;
+  font-size: 16px;
+  line-height: 18px;
   color: #FFFFFF;
 }
